# megademo

./: .gitignore  .opencode.json  AGENTS.md  Dockerfile  INTEGRATION.md  Justfile  PROMPT.md  README.md  config.yaml  docker-compose.yml  lp_client.py  opencode.json  opencode.jsonc  pyproject.toml  run-tool.sh
.workshop/: copilot.yaml  opencode.yaml
.workshop/uv/: sdk.yaml
exploiter/: __main__.py
exploiter-mcp/: server.py
exploiter/modules/: analyzer.py  bug_lookup.py  code_analyzer.py  exploit_gen.py  fetcher.py  package_fetcher.py  report_generator.py  reporter.py  vuln_db.py  web_research.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/data/: .gitignore  README.md
frontend/src/: App.svelte  app.css  main.js
mcp/ubuntu-archive/: pyproject.toml
mdmo/: config.py  database.py  main.py  models.py  scheduler.py  version_compare.py
mdmo/api/: packages.py  router.py
mdmo/plugins/: __init__.py  base.py
mdmo/scanners/: __init__.py  base.py  launchpad.py  nvd.py  oval.py
mdmo/scoring/: __init__.py  engine.py
mdmo/templates/: dashboard.html  layout.html  package_detail.html
scripts/: analyze-copyright  analyze-coverage  container-setup  download-source-pkg  generate-autopkgtest  run-build  run-lintian  run-sanitizer-build
tests/: conftest.py  test_config.py  test_version_compare.py
tools/_template/: .opencode.json  README.md  opencode.json  pyproject.toml  server.py  skill.yaml
tools/bug-triage/: .gitignore  lp_client.py  opencode.json  server.py  (+3 more)
tools/ubuntu-archive/: pyproject.toml  server.py  skill.yaml
(+44 files in other folders)
