[project]
name = "ubuntu-archive-mcp"
version = "0.1.0"
description = "MCP server for querying the Ubuntu Archive via Launchpad and archive indices"
requires-python = ">=3.10"
dependencies = [
    "cachetools>=7.1.1",
    "httpx>=0.28.1",
    "mcp>=1.27.1",
    "launchpadlib>=2.1",
    "lazr-restfulclient>=0.14",
    "wadllib>=1.3",
]

[project.scripts]
ubuntu-archive-mcp = "server:main"
